--- a/app/src/main/res/layout/record_layout.xml
+++ b/app/src/main/res/layout/record_layout.xml
@@ -38,9 +38,11 @@
         android:id="@+id/ll_channel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/ll_sample_rate"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:translationY="3dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_sample_rate"
+        tools:layout_editor_absoluteX="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -60,9 +62,11 @@
         android:id="@+id/ll_pitch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/ll_channel"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:translationY="7dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_channel"
+        tools:layout_editor_absoluteX="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -73,18 +77,20 @@
             android:id="@+id/et_pitch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0"
             android:inputType="numberSigned|numberDecimal"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:text="0" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_ratch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/ll_pitch"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:translationY="11dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_pitch"
+        tools:layout_editor_absoluteX="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -95,18 +101,20 @@
             android:id="@+id/et_ratch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="0"
             android:inputType="numberSigned|numberDecimal"
-            android:singleLine="true" />
+            android:singleLine="true"
+            android:text="0" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_tempo_change"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/ll_ratch"
         android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:translationY="15dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_ratch"
+        tools:layout_editor_absoluteX="10dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -118,8 +126,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberSigned|numberDecimal"
-            android:text="0"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:text="0" />
     </LinearLayout>
 
 
@@ -128,7 +136,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:translationY="40dp"
+        android:translationY="25dp"
         app:layout_constraintTop_toBottomOf="@id/ll_tempo_change"
         tools:layout_editor_absoluteX="10dp">
 
@@ -137,8 +145,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@id/ll_tempo_change"
-            tools:ignore="MissingClass">
+            app:layout_constraintTop_toBottomOf="@id/ll_tempo_change">
 
 
             <LinearLayout
@@ -221,26 +228,17 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:orientation="horizontal"
+        android:translationY="36dp"
         app:layout_constraintTop_toBottomOf="@id/ll_radioGroup"
         tools:layout_editor_absoluteX="10dp">
 
-        <!--<Button
-            android:id="@+id/btnRecord"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00B8D4"
-            android:text="按下录音"
-            android:textAlignment="center"
-            android:textAllCaps="false" />!-->
+
         <Switch
             android:id="@+id/switch1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="录音"
-            tools:layout_editor_absoluteX="100dp"
-            tools:layout_editor_absoluteY="594dp" />
-
-
+            android:layout_weight="0"
+            android:text="录音" />
 
         <CheckBox
             android:id="@+id/checkBoxPlaying"
@@ -250,6 +248,7 @@
             android:buttonTint="#84FFFF"
             android:text="边录边播"
             android:translationX="40dp" />
+
 
     </LinearLayout>
 
@@ -270,6 +269,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:orientation="horizontal"
+        android:translationY="58dp"
         app:layout_constraintTop_toBottomOf="@id/ll_recordState"
         tools:layout_editor_absoluteX="10dp">
 
@@ -287,8 +287,8 @@
             android:layout_height="wrap_content"
             android:background="#00BCD4"
             android:onClick="btnSaveOnClick"
-            android:text="保存到文件"
-            android:translationX="40dp" />
+            android:text="保存"
+            android:translationX="80dp" />
 
         <Button
             android:id="@+id/btnJump"
@@ -296,21 +296,19 @@
             android:layout_height="wrap_content"
             android:background="#00BCD4"
             android:rotationX="0"
-            android:text="跳转到播放界面"
-            android:translationX="80dp" />
+            android:text="播放"
+            android:translationX="160dp" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/tv_recordState"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="64dp"
         android:gravity="center"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/ll_record"
-        tools:layout_editor_absoluteX="1dp" />
-
-
+        tools:layout_editor_absoluteX="16dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
