--- a/app/src/main/res/layout/record_layout.xml
+++ b/app/src/main/res/layout/record_layout.xml
@@ -277,27 +277,42 @@
             android:id="@+id/btnPlay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#00BCD4"
             android:onClick="btnPlayOnclick"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="30dp"
+            android:background="@drawable/btn_selector"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="#fff"
             android:text="试听" />
 
         <Button
             android:id="@+id/btnSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#00BCD4"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/btn_selector"
             android:onClick="btnSaveOnClick"
             android:text="保存"
-            android:translationX="80dp" />
+            android:textColor="#fff"
+            android:translationX="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btnJump"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#00BCD4"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/btn_selector"
             android:rotationX="0"
             android:text="播放"
-            android:translationX="160dp" />
+            android:textColor="#fff"
+            android:translationX="80dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </LinearLayout>
 
     <TextView
