--- a/app/src/main/res/layout/record_layout.xml
+++ b/app/src/main/res/layout/record_layout.xml
@@ -140,7 +140,7 @@
         app:layout_constraintTop_toBottomOf="@id/ll_tempo_change"
         tools:layout_editor_absoluteX="10dp">
 
-        <com.voicechange.ui.MultiRadioGroup
+        <com.voicechange.view.MultiRadioGroup
             android:id="@+id/radioGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -219,7 +219,7 @@
                     android:text="未知" />
             </LinearLayout>
 
-        </com.voicechange.ui.MultiRadioGroup>
+        </com.voicechange.view.MultiRadioGroup>
     </LinearLayout>
 
     <LinearLayout
